[tool.poetry]
authors     = ["sin <damon@slit.sh"]
description = "a premium discord bot "
license     = "MIT"
name        = "grief"
readme      = "README.md"
version     = "1.3.2"

[tool.black]
line-length    = 160
target-version = ["py311"]

[tool.poetry.scripts]
grief          = "grief.__main__:main"
grief-launcher = "grief.launcher:main"
grief-setup    = "grief.setup:run_cli"

[tool.setuptools]
include-package-data = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]

[tool.ruff]
fix-only                   = true
ignore                     = ["D211", "D212", "E501", "TID"]
ignore-init-module-imports = true
line-length                = 160
target-version             = "py311"
unfixable                  = ["B", "D203", "RET", "RUF", "SIM", "TCH", "TRY", "UP"]
