[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Grief-DiscordBot"
description = "A highly customisable Discord bot"
readme = "README.md"
authors = [{ name = "Sin" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Chat",
]
dynamic = ["version", "requires-python", "dependencies", "optional-dependencies"]

[poetry.scripts]
grief          = "grief.__main__:main"
grief-launcher = "grief.launcher:main"
grief-setup    = "grief.setup:run_cli"

[tool.black]
line-length = 99
required-version = '23'
target-version = ['py38']
include = '\.py$'
force-exclude = '''
/(
    grief\/vendored
)/
'''
